# medIntel

./: .gitattributes  .gitignore  GEMINI.md  PROJECT_DESCRIPTION.md  README.md  dev.ps1  dev.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 110915e13b4f_initial_schema.py  3638fa1e8719_chat_ux_last_read_at_message_type.py  4d29e508fd1e_stub_for_unknown_db_head.py  9b76f373fc10_phase5_extend_patient_referrals_.py  9cb53e30d274_add_name_image_authprovider_to_users.py  a3f1c2d4e5b6_add_condition_description_and_tags.py  b1c2d3e4f5a6_add_rag_columns_to_medical_reports.py  c7e8f9a0b1c2_create_medical_reports_storage_bucket.py  ef20aeb66406_fix_referral_careteam_tz_columns.py  f1a2b3c4d5e6_add_patient_metric_entries.py
backend/app/: auth.py  database.py  deps.py  main.py  schemas.py
backend/app/api/: adherence.py  admin.py  appointments.py  auth.py  care_teams.py  chat.py  mappings.py  profiles.py  referrals.py  reports.py  treatments.py  video.py
backend/app/core/: config.py
backend/app/db/: engine.py
backend/app/middleware/: csrf.py
backend/app/models/: __init__.py  adherence.py  appointment.py  care_team.py  chat.py  enums.py  insight.py  mapping.py  patient_metric.py  profiles.py  referral.py  report.py  treatment.py  user.py
backend/tests/: conftest.py  test_admin.py  test_admin_controls.py  test_appointments.py  test_auth.py  test_chat.py  test_config.py  test_mapping_autoresolve.py  test_patient_discovery.py  test_phase5.py  test_profiles.py  test_rag_chat.py  test_report_upload.py  test_role_login.py
(+95 files in other folders)
